Fixed arrays not being updated, instead documents removed. Added new route, get player replays. Updated DOCS.
